Modify .gitignore in order to ignore cache files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 wp-content/themes/buzz-child/.sass-cache/
 wp-content/themes/buzz-child/node_modules/
 wp-content/uploads/
+wp-content/cache/
 wp-config.php
